añadiendo la sinopsis

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
 body{
-    background-color: red;
-    background-image: url("./imagenes/imagen-png");
-}
-.portada{
-    background-image: url("./imagenes/imagen-png");
+    background-color: gray;
 }
